--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "roll-call",
+  "productName": "Roll Call",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -41,6 +42,9 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {}
+  },
+  "build": {
+    "productName": "点名器"
   },
   "browserslist": [
     "> 1%",
